Adding player ability

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,9 +104,9 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/Levels/Demo
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/Levels/Demo
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem5=/Game/Levels/TerrainMap
@@ -235,13 +235,17 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
 OpenAssetsAtExit=/Game/Chloe/UI/HUD_Proto.HUD_Proto
+OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
 OpenAssetsAtExit=/Game/Will/AbilityEnum.AbilityEnum
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
+OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2452,6 +2456,83 @@ Widget.Render Transform=True
 Widget.Performance=True
 Widget.Clipping=True
 Widget.Navigation=True
+BaseAI_C.LOD=True
+BaseAI_C.Variable=True
+REINST_BaseAI_C_415.TransformCommon=True
+REINST_BaseAI_C_415.Animation=True
+REINST_BaseAI_C_415.Mesh=True
+REINST_BaseAI_C_415.None=True
+REINST_BaseAI_C_415.Physics=True
+REINST_BaseAI_C_415.Clothing=True
+REINST_BaseAI_C_415.Collision=True
+REINST_BaseAI_C_415.Lighting=True
+REINST_BaseAI_C_415.ClothingSimulation=True
+REINST_BaseAI_C_415.Rendering=True
+REINST_BaseAI_C_415.Tags=True
+REINST_BaseAI_C_415.Activation=True
+REINST_BaseAI_C_415.Cooking=True
+REINST_BaseAI_C_415.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_415.Character Movement (General Settings)=True
+REINST_BaseAI_C_415.Character Movement: Walking=True
+REINST_BaseAI_C_415.Character Movement: Swimming=True
+REINST_BaseAI_C_415.Character Movement: Flying=True
+REINST_BaseAI_C_415.Character Movement: Custom Movement=True
+REINST_BaseAI_C_415.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_415.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_415.Character Movement (Networking)=True
+REINST_BaseAI_C_415.Character Movement=True
+REINST_BaseAI_C_415.Character Movement: Avoidance=True
+REINST_BaseAI_C_415.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_415.RootMotion=True
+REINST_BaseAI_C_415.NavMovement=True
+REINST_BaseAI_C_415.Velocity=True
+REINST_BaseAI_C_415.PlanarMovement=True
+REINST_BaseAI_C_415.MovementComponent=True
+REINST_BaseAI_C_415.Shape=True
+REINST_BaseAI_C_415.Navigation=True
+REINST_BaseAI_C_415.Character=True
+REINST_BaseAI_C_415.Camera=True
+REINST_BaseAI_C_415.Pawn=True
+REINST_BaseAI_C_415.Input=True
+REINST_BaseAI_C_415.Actor=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.Sampling=True
+BoneProxy.Transform=True
+BoneProxy.Bone=True
+BoneProxy.Reference Transform=True
+SkeletalMeshSocket.Socket Parameters=True
+REINST_TopDownCharacter_C_514.Variable=True
+REINST_TopDownCharacter_C_514.TransformCommon=True
+REINST_TopDownCharacter_C_514.Sockets=True
+REINST_TopDownCharacter_C_514.Animation=True
+REINST_TopDownCharacter_C_514.Mesh=True
+REINST_TopDownCharacter_C_514.Materials=True
+REINST_TopDownCharacter_C_514.Clothing=True
+REINST_TopDownCharacter_C_514.ClothingSimulation=True
+REINST_TopDownCharacter_C_514.Physics=True
+REINST_TopDownCharacter_C_514.Collision=True
+REINST_TopDownCharacter_C_514.Lighting=True
+REINST_TopDownCharacter_C_514.Rendering=True
+REINST_TopDownCharacter_C_514.Tags=True
+REINST_TopDownCharacter_C_514.ComponentReplication=True
+REINST_TopDownCharacter_C_514.Activation=True
+REINST_TopDownCharacter_C_514.Cooking=True
+REINST_TopDownCharacter_C_514.Events=True
+TopDownCharacter_C.SkeletalMesh=True
+TopDownCharacter_C.Optimization=True
+TopDownCharacter_C.HLOD=True
+TopDownCharacter_C.Mobile=True
+TopDownCharacter_C.AssetUserData=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2524,14 +2605,14 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2552,7 +2633,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.PlayerCurrentlyDashing\" \"Object.PlayerCurrentlyDashing\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2612,6 +2693,7 @@ RangedAI_C=
 BaseAI_C=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+REINST_BaseAI_C_415="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3431,26 +3513,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Will/AbilityEnum
-MRUItem1=/Game/Chloe/UI/HUD_Proto
-MRUItem2=/Game/Widgets/Ability_Wheel
-MRUItem3=/Game/Levels/MechanicsLevel
-MRUItem4=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem5=/Game/Levels/Demo
-MRUItem6=/Game/AIAgent/RangedTree
-MRUItem7=/Game/AIAgent/BaseAI
-MRUItem8=/Game/AIAgent/I_Damage
-MRUItem9=/Game/AIAgent/RangeFinder
-MRUItem10=/Game/AIAgent/TargetInterface
-MRUItem11=/Game/AIAgent/Baseprojectile
-MRUItem12=/Game/AIAgent/RangedController
-MRUItem13=/Game/AIAgent/AttackPlayer
-MRUItem14=/Game/TopDownBP/Blueprints/ICoolDown
-MRUItem15=/Game/TopDownBP/Blueprints/CoolDownComponent
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem17=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem18=/Game/TopDownBP/Blueprints/MainMenuPawn
-MRUItem19=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem1=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem2=/Game/AIAgent/BaseAI
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem4=/Game/Will/AbilityEnum
+MRUItem5=/Game/Widgets/Ability_Wheel
+MRUItem6=/Game/Chloe/UI/HUD_Proto
+MRUItem7=/Game/Levels/MechanicsLevel
+MRUItem8=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem9=/Game/Levels/Demo
+MRUItem10=/Game/AIAgent/RangedTree
+MRUItem11=/Game/AIAgent/I_Damage
+MRUItem12=/Game/AIAgent/RangeFinder
+MRUItem13=/Game/AIAgent/TargetInterface
+MRUItem14=/Game/AIAgent/Baseprojectile
+MRUItem15=/Game/AIAgent/RangedController
+MRUItem16=/Game/AIAgent/AttackPlayer
+MRUItem17=/Game/TopDownBP/Blueprints/ICoolDown
+MRUItem18=/Game/TopDownBP/Blueprints/CoolDownComponent
+MRUItem19=/Game/TopDownBP/Blueprints/PlayerControl
 
 [WidgetTemplatesExpanded]
 Extra=False
