--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/MechanicsLevel
 MRUItem2=/Game/Levels/Demo
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -213,6 +213,9 @@ BaseArmour_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 BaseAccessory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Calc Offence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Calc Defence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+MulticastDelegateProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+TopDownGameMode_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+TopDownCharacterCleaned_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -236,17 +239,12 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
-OpenAssetsAtExit=/Game/GW000979/DataStruct/Structs/Weapon_Struct.Weapon_Struct
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory.BaseAccessory
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2466,9 +2464,23 @@ BaseAccessory_C.Rendering=True
 BaseAccessory_C.Replication=True
 BaseAccessory_C.Input=True
 BaseAccessory_C.Actor=True
+TopDownGameMode_C.Default=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+MulticastDelegateProperty.Variable=True
+MulticastDelegateProperty.DefaultValueCategory=True
+REINST_TopDownCharacterCleaned_C_189.None=True
+REINST_TopDownCharacterCleaned_C_189.Tick=True
+REINST_TopDownCharacterCleaned_C_189.Character=True
+REINST_TopDownCharacterCleaned_C_189.Camera=True
+REINST_TopDownCharacterCleaned_C_189.Pawn=True
+REINST_TopDownCharacterCleaned_C_189.Rendering=True
+REINST_TopDownCharacterCleaned_C_189.Replication=True
+REINST_TopDownCharacterCleaned_C_189.Input=True
+REINST_TopDownCharacterCleaned_C_189.Actor=True
 
 [AssetEditorToolkitTabLocation]
-/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
+/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
 /Game/AIAgent/TargetInterface.TargetInterface=0
 /Game/AIAgent/ProtoAI.ProtoAI=0
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
@@ -2537,6 +2549,7 @@ BaseAccessory_C.Actor=True
 /Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned=0
 /Game/GW000979/DataStruct/DataTables/ArmourDataTable.ArmourDataTable=1
 /Game/GW000979/DataStruct/Structs/AccessoryStruct.AccessoryStruct=0
+/Game/TopDownBP/Blueprints/I_DeathSystem.I_DeathSystem=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2556,8 +2569,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character=
-Pawn=
+Character="\"Object.BaseDamage\" \"Object.BaseDamage\" "
+Pawn="\"Object.BaseDamage\" \"Object.BaseDamage\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2571,7 +2584,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.BaseDamage\" \"Object.BaseDamage\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2634,7 +2647,11 @@ PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
 BaseAccessory_C="\"Object.Accessory Stats\" \"Object.Accessory Stats\" "
 Calc Offence Stats="\"Struct.Temp Status\" "
-Calc Defence Stats="\"Struct.TempStatusRes\" "
+Calc Defence Stats="\"Struct.TempCritRes\" "
+TopDownGameMode_C="\"Object.DeadActor\" \"Object.DeadActor\" "
+GameModeBase="\"Object.DeadActor\" \"Object.DeadActor\" "
+Info=
+TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPowerGeneration\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2660,7 +2677,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3454,26 +3471,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem2=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem3=/Game/GW000979/DataStruct/Structs/Armour_Struct
-MRUItem4=/Game/GW000979/DataStruct/Structs/AccessoryStruct
-MRUItem5=/Game/GW000979/DataStruct/Inventory
-MRUItem6=/Game/GW000979/DataStruct/DataTables/ArmourDataTable
-MRUItem7=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem10=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem11=/Game/Levels/Demo
-MRUItem12=/Game/AIAgent/RangedTree
-MRUItem13=/Game/AIAgent/BaseAI
-MRUItem14=/Game/AIAgent/I_Damage
-MRUItem15=/Game/AIAgent/RangeFinder
-MRUItem16=/Game/AIAgent/TargetInterface
-MRUItem17=/Game/AIAgent/Baseprojectile
-MRUItem18=/Game/AIAgent/RangedController
-MRUItem19=/Game/AIAgent/AttackPlayer
+MRUItem0=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem4=/Game/Levels/MechanicsLevel
+MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem6=/Game/GW000979/DataStruct/Structs/Weapon_Struct
+MRUItem7=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem8=/Game/GW000979/DataStruct/Structs/AccessoryStruct
+MRUItem9=/Game/GW000979/DataStruct/Inventory
+MRUItem10=/Game/GW000979/DataStruct/DataTables/ArmourDataTable
+MRUItem11=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem12=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem13=/Game/Levels/Demo
+MRUItem14=/Game/AIAgent/RangedTree
+MRUItem15=/Game/AIAgent/BaseAI
+MRUItem16=/Game/AIAgent/I_Damage
+MRUItem17=/Game/AIAgent/RangeFinder
+MRUItem18=/Game/AIAgent/TargetInterface
+MRUItem19=/Game/AIAgent/Baseprojectile
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3583,5 +3600,17 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[/Script/Kismet.BlueprintPaletteFavorites]
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveBeginPlay",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveTick",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetPlayerPawn",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_IfThenElse")
+CustomFavorites=(FieldName="/Script/Engine.Actor:GetTransform",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.Actor:K2_DestroyActor",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
+CustomFavorites=(FieldName="/Script/Engine.KismetMathLibrary:GreaterEqual_FloatFloat",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CurrentProfile=CustomProfile
 
 
