--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2569,8 +2569,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.BaseDamage\" \"Object.BaseDamage\" "
-Pawn="\"Object.BaseDamage\" \"Object.BaseDamage\" "
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2584,7 +2584,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.BaseDamage\" \"Object.BaseDamage\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2648,8 +2648,8 @@ BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
 BaseAccessory_C="\"Object.Accessory Stats\" \"Object.Accessory Stats\" "
 Calc Offence Stats="\"Struct.Temp Status\" "
 Calc Defence Stats="\"Struct.TempCritRes\" "
-TopDownGameMode_C="\"Object.DeadActor\" \"Object.DeadActor\" "
-GameModeBase="\"Object.DeadActor\" \"Object.DeadActor\" "
+TopDownGameMode_C=
+GameModeBase=
 Info=
 TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPowerGeneration\" "
 
@@ -3471,9 +3471,9 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem2=/Game/TopDownBP/Blueprints/I_DeathSystem
 MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
 MRUItem4=/Game/Levels/MechanicsLevel
 MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
