--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -182,13 +182,13 @@ Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=
-IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
 TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 AttackPlayer_C=
 Door_C=
@@ -216,6 +216,9 @@ Calc Defence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.Default
 MulticastDelegateProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 TopDownGameMode_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 TopDownCharacterCleaned_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+Inventory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+MapProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BaseShield_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -239,12 +242,20 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct/BaseEquipment
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory.BaseAccessory
+OpenAssetsAtExit=/Game/c024816h/PickUpInterface.PickUpInterface
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseShield.BaseShield
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour.BaseArmour
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2478,6 +2489,20 @@ REINST_TopDownCharacterCleaned_C_189.Rendering=True
 REINST_TopDownCharacterCleaned_C_189.Replication=True
 REINST_TopDownCharacterCleaned_C_189.Input=True
 REINST_TopDownCharacterCleaned_C_189.Actor=True
+Inventory_C.Sockets=True
+Inventory_C.Events=True
+BaseShield_C.Tick=True
+BaseShield_C.Rendering=True
+BaseShield_C.Replication=True
+BaseShield_C.Input=True
+BaseShield_C.Actor=True
+BaseAccessory_C.Default=True
+BaseArmour_C.Tick=True
+BaseArmour_C.Default=True
+BaseArmour_C.Rendering=True
+BaseArmour_C.Replication=True
+BaseArmour_C.Input=True
+BaseArmour_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2550,18 +2575,21 @@ REINST_TopDownCharacterCleaned_C_189.Actor=True
 /Game/GW000979/DataStruct/DataTables/ArmourDataTable.ArmourDataTable=1
 /Game/GW000979/DataStruct/Structs/AccessoryStruct.AccessoryStruct=0
 /Game/TopDownBP/Blueprints/I_DeathSystem.I_DeathSystem=0
+/Game/GW000979/DataStruct/WeaponInt2.WeaponInt2=0
+/Game/GW000979/DataStruct/WeaponInt.WeaponInt=0
+/Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2569,8 +2597,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character=
-Pawn=
+Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
+Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2584,7 +2612,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2601,7 +2629,7 @@ REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Mo
 REINST_TestPawn2_C_294="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[16]\" "
-BaseWeapon_C="\"Object.WeaponStats\" \"Object.WeaponStats\" "
+BaseWeapon_C=
 TestPawn3_C=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2644,14 +2672,15 @@ RangedAI_C=
 BaseAI_C=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
-BaseAccessory_C="\"Object.Accessory Stats\" \"Object.Accessory Stats\" "
+BaseArmour_C=
+BaseAccessory_C=
 Calc Offence Stats="\"Struct.Temp Status\" "
 Calc Defence Stats="\"Struct.TempCritRes\" "
 TopDownGameMode_C=
 GameModeBase=
 Info=
 TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPowerGeneration\" "
+Inventory_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2677,7 +2706,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3471,26 +3500,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem4=/Game/Levels/MechanicsLevel
-MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem6=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem7=/Game/GW000979/DataStruct/Structs/Armour_Struct
-MRUItem8=/Game/GW000979/DataStruct/Structs/AccessoryStruct
-MRUItem9=/Game/GW000979/DataStruct/Inventory
-MRUItem10=/Game/GW000979/DataStruct/DataTables/ArmourDataTable
-MRUItem11=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem12=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem13=/Game/Levels/Demo
-MRUItem14=/Game/AIAgent/RangedTree
-MRUItem15=/Game/AIAgent/BaseAI
-MRUItem16=/Game/AIAgent/I_Damage
-MRUItem17=/Game/AIAgent/RangeFinder
-MRUItem18=/Game/AIAgent/TargetInterface
-MRUItem19=/Game/AIAgent/Baseprojectile
+MRUItem0=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem1=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
+MRUItem4=/Game/GW000979/DataStruct/Structs/AccessoryStruct
+MRUItem5=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem6=/Game/Chloe/UI/I_InventoryInterface
+MRUItem7=/Game/c024816h/PickUpInterface
+MRUItem8=/Game/GW000979/DataStruct/WeaponInt
+MRUItem9=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem10=/Game/AIAgent/AIbot
+MRUItem11=/Game/AIAgent/BaseAI
+MRUItem12=/Game/GW000979/DataStruct/Inventory
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem14=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem15=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem17=/Game/Levels/MechanicsLevel
+MRUItem18=/Game/GW000979/DataStruct/Structs/Weapon_Struct
+MRUItem19=/Game/GW000979/DataStruct/DataTables/ArmourDataTable
 
 [WidgetTemplatesExpanded]
 Extra=False
